--- a/frontend/style.css
+++ b/frontend/style.css
@@ -45,7 +45,7 @@ body {
 #csvTable {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 0.5px;
     width: 48%;  /* Adjust the width for side-by-side layout */
     max-height: 1000px;
     overflow-y: auto;
@@ -57,7 +57,6 @@ body {
 #selectedCards {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
     width: 48%;  /* Adjust the width for side-by-side layout */
     max-height: 1000px;
     overflow-y: auto;
@@ -67,19 +66,61 @@ body {
 
 /* Styling for each card */
 .card {
-    background-color: white;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 20px;
-    width: 90%;  /* Adjust for the side-by-side layout */
-    height: 100px;  /* Set a fixed height for the cards */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease-in-out;
     display: flex;
-    justify-content: space-between;  /* Align content horizontally */
-    margin-bottom: 1px;
-    margin-top: 1px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background: white;
+    border-left-width: 5px;
+    border-left-style: solid;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    height: 55px; /* Compact height */
+    width: 100%;
+    overflow: hidden;
+    transition: height 0.3s ease-in-out;
 }
+
+.card.expanded {
+    height: 100px; /* Expanded height */
+}
+
+.card-left {
+    flex: 1;
+    text-align: left;
+}
+
+.card-right {
+    display: flex;
+    justify-content: flex-end;
+    text-align: right;
+}
+
+.metric {
+    font-size: 12px;
+    display: flex;
+    gap: 3px;
+}
+
+.expandable-content {
+    display: none;
+    width: 100%;
+    text-align: right;
+}
+
+.card.expanded .expandable-content {
+    display: block;
+}
+
+.toggle-button {
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 5px;
+}
+
 
 .card:hover {
     transform: translateY(-5px);
@@ -102,13 +143,6 @@ body {
 .card-left .slotName {
     font-size: 16px;
     color: #777;
-}
-
-/* Card right section (metrics) */
-.card-right {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .card-right .metric {
