--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 20px;
     background-color: #333;
+    height: 100%;
 }
 
 h1 {
@@ -43,6 +44,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    height: 100%;
 }
 
 /* Styling for the CSV table container */
@@ -51,7 +53,8 @@ h1 {
     flex-wrap: wrap;
     gap: 0.5px;
     width: 48%;  /* Adjust the width for side-by-side layout */
-    max-height: 1000px;
+    height: 100%;
+    /* max-height: 1000px; */
     overflow-y: auto;
     justify-content: center;
     align-items: center;
@@ -62,7 +65,8 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     width: 48%;  /* Adjust the width for side-by-side layout */
-    max-height: 1000px;
+    height: 100%;
+    /* max-height: 1000px; */
     overflow-y: auto;
     justify-content: center;
     align-items: center;
